# Real-time-System-Monitor-Dashboard

./: .gitignore  Cargo.toml  README.md  config.toml
src/: lib.rs  main.rs
src/config/: settings.rs
src/system/: mod.rs  monitor.rs  processes.rs
src/ui/: dashboard.rs  events.rs  mod.rs  widgets.rs
src/utils/: helpers.rs
